# qa_guru_UI

./: .env  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_form_fill_in.py
FormFillIn.py/: test_form_fill_in.py
HW_5_5/: registration.py  resources.py
data/: user.py
form_fill_in/: test_form_fill_in.py
notifications/: config.json
pages/: registration.py
tests/: conftest.py  test_form_fill_in.py
utils/: attach.py  helper.py  resources.py
