[tool.poetry]
name = "5-hm"
version = "0.1.0"
description = ""
authors = ["YuliyaShkretova <129888062+YuliyaShkretova@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "5_hm"}]

[tool.pytest.ini_options]
markers = [
    'RedValidation: красные рамки',
    'SignValidation: красный воск знак',
    'CloseWindow: модальное окно закрыто',
    'MobileCheck: телефон может содержать 10 знаков',
    'PartlyFilled: проверка обязательных полей для регистрации',
    'FullFilled: регистрация проходит'
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

